onclick tooltip hide

--- a/index.html
+++ b/index.html
@@ -130,7 +130,16 @@
 				</li>
 				<li>
 					<span id="demo-multiple">Hover</span> Multiple tooltips on a single element
+				</li>				
+				<li>
+					<span id="demo-custom" title="click me" class="custom">Click</span> Content change
 				</li>
+				<li>
+					<span id="demo-custom2" title="click me" class="custom">Click</span> Custom event by Saz
+				</li>
+				<!-- <li>
+					<span id="demo-custom3" title="click me" class="custom">Click</span> Custom event by Saz
+				</li> -->
 				<li>...&amp; more!</li>
 			</ul>
 		</section>
